# tab5_toolbox_v1

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_adc.c  app_adc.h  app_container.c  app_container.h  app_gpio.c  app_gpio.h  app_i2c.c  app_i2c.h  app_manager.c  app_manager.h  app_music.c  app_music.h  app_usb.c  app_usb.h  gui.c  gui.h  hal.h  image_resources.h  more_menu.c  more_menu.h  side_toolbar.c  side_toolbar.h  sidebar.c  sidebar.h  top_toolbar.c  top_toolbar.h  topbar.c  topbar.h
main/assets/: assets.h  ui_image_button_adc.c  ui_image_button_gpio.c  ui_image_button_i2c.c  ui_image_button_more.c  ui_image_button_music.c  ui_image_button_usb.c  ui_image_control_battery.c  ui_image_control_brightness_1.c  ui_image_control_brightness_2.c  ui_image_control_brightness_3.c  ui_image_control_brightness_4.c  ui_image_control_brightness_5.c  ui_image_control_brightness_6.c  ui_image_control_brightness_7.c  ui_image_control_brightness_8.c  ui_image_control_charge_05a.c  ui_image_control_charge_1a.c  ui_image_control_charge_no.c  ui_image_control_powerdown_hold0.c  ui_image_control_powerdown_hold1.c  ui_image_control_powerdown_hold2.c  ui_image_control_powerdown_hold3.c  ui_image_control_powerdown_normal.c  ui_image_control_sleep.c  ui_image_control_sleep_hold0.c  ui_image_control_sleep_hold1.c  ui_image_control_sleep_hold2.c  ui_image_control_sleep_hold3.c  ui_image_control_volume_0.c  ui_image_control_volume_1.c  ui_image_control_volume_2.c  ui_image_control_volume_3.c  ui_image_control_volume_4.c  ui_image_control_volume_5.c  ui_image_control_wifi.c
