idf_component_register(SRCS "m5stack-tab5-lvgl.c" 
                            "gui.c" 
                            "hal.c"
                            "sidebar.c"
                            "topbar.c"
                            "app_container.c"
                            "assets/ui_image_button_adc.c"
                            "assets/ui_image_button_i2c.c"
                            "assets/ui_image_button_gpio.c"
                            "assets/ui_image_button_usb.c"
                            "assets/ui_image_button_music.c"
                            "assets/ui_image_button_more.c"
                            "assets/ui_image_control_powerdown_normal.c"
                            "assets/ui_image_control_sleep.c"
                            "assets/ui_image_control_battery.c"
                            "assets/ui_image_control_charge_05a.c"
                            "assets/ui_image_control_wifi.c"
                            "assets/ui_image_control_volume_5.c"
                            "assets/ui_image_control_brightness_8.c"
                    INCLUDE_DIRS ".")
